<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/info">
        <item android:id="@+id/info_title" android:title="@string/info"  android:checkable="false"/>
        <item
            android:checked="true"
            android:id="@+id/zhihu"
            android:checkable="true"
            android:icon="@mipmap/ic_drawer_zhihu"
            android:title="@string/zhihu" />
        <item
            android:id="@+id/wechat"
            android:checkable="true"
            android:icon="@mipmap/ic_drawer_wechat"
            android:title="@string/wechat" />
        <item
            android:id="@+id/gank"
            android:checkable="true"
            android:icon="@mipmap/ic_drawer_gank"
            android:title="@string/gank" />
        <item
            android:id="@+id/gold"
            android:checkable="true"
            android:icon="@mipmap/ic_drawer_gold"
            android:title="@string/gold"
            />
        <item
            android:id="@+id/v2ex"
            android:checkable="true"
            android:icon="@mipmap/ic_drawer_vtex"
            android:title="@string/V2EX" />
    </group>


    <group android:id="@+id/option_group">
        <item android:id="@+id/option" android:title="@string/options" android:checkable="false" />

        <item
            android:id="@+id/collect"
            android:checkable="true"
            android:icon="@mipmap/ic_drawer_like"
            android:title="@string/collect" />
        <item
            android:id="@+id/settings"
            android:checkable="true"
            android:icon="@mipmap/ic_drawer_setting"
            android:title="@string/settings" />
        <item
            android:id="@+id/about"
            android:checkable="true"
            android:title="@string/about"
            android:icon="@mipmap/ic_drawer_about"/>
    </group>
</menu>